src/snapshots/arkivisto__init_config__tests__parse_scanimage_list__parses_multiple_scanners.snap
---
source: src/init_config.rs
expression: result
---
- device_name: "brother4:net1;dev0"
  description: Brother *brother-mfc9330cdw MFC-9330CDW
- device_name: "airscan:e1:HP ScanJet Flow N7000 snw1"
  description: HP ScanJet Flow N7000 snw1
